src/test/resources/wacc_examples/valid/imports/importFiles/aClass.wacc
begin
  class c {
    int t,
    char c
    int f(int x) is
        return 6 + x
    end
  }
  skip
end