src/test/resources/wacc_examples/invalid/semanticErr/imports/importFiles/fileWithClass.wacc
begin
  class a {
    int x,
    int y
  }
  skip
end